# teamcity-bazel

./: .gitignore  WORKSPACE.bazel
src/: AddTests.cc  BUILD  MyAdd.java  MyAddTests.java  fib_benchmark.cc  myadd.cpp  myadd.hpp  myaddtests.py
